# echo

./: .editorconfig  .flake8  .gitignore  CHANGELOG.md  Dockerfile-tox  README.md  configuration.py  design.markdown  design.md  echo_models.py  echo_optimiser.py  echo_scenario.py  mkdocs.yml  objectives.py  old_models.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: linttest.yml
.github/workflows/: coverage.yml  linttest.yml
bz_data/: acton_building_data.csv  acton_network.json  anu_hv_network.py  anu_tariffs.py  bz_utils.py  chiller_data.csv  chiller_data_arx.csv  clean_data.py  data_munging_tools.py  dict_to_json_script.py  gas_profile_csit.csv  gas_profile_innovation.csv  gas_profile_jcsmr.csv  heat_pump_data.csv  thermal_load_arx_b155_data.csv
bz_data/acton_model/: acton_campus_model.py  acton_model_data_input.py  custom_classes.py  model_validation.py  process_results.py  tariffs_and_costs.py
docs/: concepts.md  index.md  solvers.md
docs/source/: conf.py  constraints.rst  echo.echo_models.rst  echo.objectives.rst  echo.rst  echo_graph.rst  edges.rst  example.btm.rst  example.builder.rst  examples.rst  expansion_planning.rst  getting_started.rst  index.rst  modules.rst  nodes.rst  objectives.rst  optimiser.rst  ports.rst  user_guide.rst
echo/: builder_config.py  bz_builder.py  bz_config.py  bz_data_cleaning.py  bz_site_builder.py  bz_utils.py  configuration.py  constants.py  echo_builder.py  echo_builder_objectives.py  echo_models.py  echo_optimiser.py  echo_pydantic.py  echo_scenario.py  echo_sgt.py  echo_thermal_models.py  echo_validators.py  objectives.py  old_optimiser.py  utils.py
echo/models/: agnostic.py  base.py  carbon.py  electrical.py  gas.py  prebuilt.py  pyomo.py  scenario.py  thermal.py
examples/: attribute_tracking.py  behind_the_meter_with_battery.py  data.csv  demand_tariff.py  demand_tariff_with_time_periods.py  electric_vehicles.py  neighbourhood_battery.py  neighbourhood_battery_with_aggregate_load.py  serialisable_graph.py  simple_behind_the_meter_network.py  simple_thermal_network.py  stand_alone_power_system.py  using_dataframes.py
examples/jupyter_examples/: demand_tariffs_time_periods.ipynb  electric_vehicles.ipynb  path_tracing.ipynb  slack_variables.ipynb  visualise_network.ipynb
old-docs/source/: conf.py.save  edges.rst  expansion_planning.rst  nodes.rst  optimiser.rst  user_guide.rst
scripts/: __test_site_optimisation.py  _test_site_dicts.py  arx.py  btm_battery_ev_example.ipynb  btm_battery_example.py  building_thermal_load_example.py  bz_network_builder_example.py  bz_network_example.py  bz_opt.py  bz_soad_som.py  bz_som_soad.py  chiller_with_controlled_thermal_load_example.py  demand_tariff_example.py  demand_tariff_with_time_periods.py  demand_tariffs_with_time_periods_example.py  echo_test.py  echo_test_basic.py  echo_test_capacity_optimisation.py  echo_test_expansion_planning.py  echo_test_flow_tracing.py  energy_only_scenario_example.ipynb  ev_example.py  example_site_builder.py  expansion_example.py  f&s_demo.py  fixed_cop_gas_boiler_example.py  formulation_comparison.py  formulation_comparison_2.py  formulation_comparison_3.py  gas_boiler.py  heat_pump_and_controlled_thermal_load_example.py  nb_with_aggregate_load.py  neighbourhood_battery_example.py  network_builder_example.py  new_hp_and_controlled_load_example.py  path_tracing_script.py  retirement_example.py  revs_site_optimisation_example.ipynb  scaling_results.csv  scaling_script.py  (+8 more)
scripts/builder_examples/: build_from_dict_example.py  netset_example.py  new_builder_example_v2.py  new_network_builder_example.py
scripts/bz_model/: acton_campus_model.py  acton_model_bau.py  acton_model_full.py  acton_model_with_heatpumps.py  bz_model_constants.py  custom_classes.py  graph_plotting_utils.py  process_results.py  read_datafiles.py
scripts/bz_model/temp/: acton_campus_model.py
scripts/echo_scenario_examples/: energy_only_scenario.py  energy_only_scenario_example.ipynb  energy_only_scenario_v2.py  netset_optimisation_and_powerflow.py  netset_scenario_optimisation.ipynb  netset_scenario_optimisation.py  scenario_example.ipynb  scenario_power_flows_example.ipynb  site_optimisation_example.ipynb  site_optimisation_example.py
scripts/ev_examples/: v0g.py  v1g.py  v2g.py
scripts/jupyter_examples/: btm_battery_example.ipynb  demand_tariffs.ipynb  demand_tariffs_time_periods.ipynb  ev_example.ipynb  f&s_demo.ipynb  path_tracing.ipynb  slack_variables.ipynb  visualise_network.ipynb
scripts/jupyter_examples/.ipynb_checkpoints/: btm_battery_example-checkpoint.ipynb
scripts/manual_examples/: Dataframe.csv  btm_battery_example.py  demand_tariff_example.py  demand_tariff_with_time_periods.py  ev_example.py  example_using_df.py  nb_with_aggregate_load.py  neighbourhood_battery_example.py  stand_along_power_system.py  test_electrolyser.py  thermal_assets.py  v0g.py
scripts/network_building_examples/: builder_example.py  multi_commodity_example.py  network_builder_example.py  new_builder_example.py  new_builder_example_v2.py  new_mes_example.py  new_network_builder_example.py
src/echo/: __init__.py  configuration.py  constants.py  echo_builder.py  echo_optimiser.py  echo_sgt.py  exceptions.py  functional.py  objectives.py  optimiser.py  tracker.py  utils.py  validators.py  visualization.py
tests/: base.py  conftest.py  test_agnostic_integration.py  test_agnostic_models.py  test_asset_types.py  test_base.py  test_contingency_capacity.py  test_contingency_positive_capacity.py  test_demand_tariff.py  test_electrical.py  test_evs.py  test_gas.py  test_hybrid_inverter_behaviour.py  test_inverter_efficiency_behaviour.py  test_load_control_schemes.py  test_new_demand_tariffs.py  test_new_evs.py  test_objective_functions.py  test_path_tracing.py  test_peak_power_objective.py  test_peak_power_optimisation.py  test_scaling_performance.py  test_simple_controlled_load.py  test_simple_solar_curtailment.py  test_slack_variables.py  test_tariffs.py  test_thermal_models.py  test_thermal_models_optimisation.py  test_utils.py  test_visualisation.py
(+17 files in other folders)
