[tool.black]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["src/"]
testpaths = "tests"
filterwarnings = ["error::DeprecationWarning"]

[tool.isort]
profile = "black"
line_length=120

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]
exclude = ["docs/", "scripts/"]
check_untyped_defs = true

# This disables the error "Skipping analyzing..." due to a lack of third party stubs / type hints
[[tool.mypy.overrides]]
module = "pyomo.*"
ignore_missing_imports = true

# This disables the error "Skipping analyzing..." due to a lack of third party stubs / type hints
[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

# This disables the error "Skipping analyzing..." due to a lack of third party stubs / type hints
[[tool.mypy.overrides]]
module = "networkx.*"
ignore_missing_imports = true


[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echo"
version = "2.1.10"
dependencies = [
    "networkx>=3.1,<4",
    "numpy>=1.26,<2",
    "orjson>=3.9,<4",
    "pandas>=2.1,<3",
    "plotly>=5.22,<6",
    "pydantic>=1.10,<2",
    "pyomo>=6.6,<7",
    "scikit-learn>=1.3,<2",
    "seaborn>=0.12,<1",
    "shortuuid>=1.0.11,<2",
    "typing-extensions>=4.7,<5",
]

[project.optional-dependencies]
dev = ["bandit[toml]", "flake8", "mypy", "black", "types-pytz"]
test = ["pytest", "pytest-timeout", "hypothesis[numpy]"]
docs = ["sphinx", "sphinx-rtd-theme"]

[tool.setuptools.package-data]
"echo" = ["py.typed"]
