[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[project]
dynamic = ["version", "readme"]
name = "echo"
description = "The Energy and Commodity Holistic Optimiser (ECHO)."
keywords = ["energy", "commodity", "modelling", "optimization"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pydantic :: 1",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "deprecated>=1.3.1,<2",
  "matplotlib>=3.11,<4",
  "networkx>=3.1,<4",
  "numpy>=1.26,<2",
  "orjson>=3.9,<4",
  "pandas>=2.1,<3",
  "plotly>=5.22,<6",
  "pydantic>=1.10,<2",
  "pyomo>=6.6,<7",
  "scikit-learn>=1.3,<2",
  "seaborn>=0.12,<1",
  "shortuuid>=1.0.11,<2",
  "typing-extensions>=4.7,<5",
  "scipy>=1.14.1,<2",
]
requires-python = ">= 3.11"
authors = [
  { name = "Ruth Kravis" },
  { name = "Johannes Hendriks" },
  { name = "Anna Skobleva" },
  { name = "Dora He" },
  { name = "Benjamin Weise" },
  { name = "Josh Vote" },
  { name = "Antoine Desmet" },
  { name = "Michael Thomas", email = "michael.thomas@anu.edu.au" },
  { name = "Mike Turner", email = "mike.turner@anu.edu.au" },
]
maintainers = [
  { name = "Michael Thomas", email = "michael.thomas@anu.edu.au" },
  { name = "Mike Turner", email = "mike.turner@anu.edu.au" },
]


[project.urls]
#Homepage = "https://pypi.org/project/PROJECTNAME"
#Documentation = "https://PROJECTNAME.readthedocs.io"
Repository = "https://github.com/bsip/echo"
Issues = "https://github.com/bsgip/echo/issues"
Changelog = "https://github.com/bsgip/echo/blob/main/CHANGELOG.md"


[dependency-groups]
linters = ["bandit[toml]", "codespell", "coverage", "pytest-cov", "ruff", "ty"]
test = ["hypothesis[numpy]", "pytest", "pytest-timeout", "pytest-xdist"]
docs = ["sphinx", "sphinx-rtd-theme"]
dev = [{ include-group = "linters" }, { include-group = "test" }]
all = [{ include-group = "dev" }, { include-group = "docs" }]


[tool.setuptools.package-data]
"echo" = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "echo.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }


[tool.bandit]
exclude_dirs = ["tests"]

[tool.ruff]
line-length = 120
extend-exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "S", "C90", "B", "UP", "ANN", "N"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pep8-naming]
# Allow pydantic's @validator and @root_validator decorators to trigger class method treatment. 
classmethod-decorators = [
  "classmethod",
  "pydantic.validator",
  "pydantic.root_validator",
]

[tool.ruff.lint.per-file-ignores]
"src/**" = ["ANN003"]
"tests/**" = ["S", "ANN", "N", "B017"]

[tool.ty.src]
include = ["src", "tests"]


[tool.pytest.ini_options]
pythonpath = ["src/"]
testpaths = "tests"
filterwarnings = ["error::DeprecationWarning"]
